[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/multitexturemeshtest.gd" type="Script" id=1]
[ext_resource path="res://Scripts/MeshInstance.gd" type="Script" id=2]
[ext_resource path="res://materials/BasicTest.tres" type="Material" id=3]
[ext_resource path="res://AssetsOther/Fonts/Cardo45.tres" type="DynamicFont" id=4]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="MeshInstance"]
wait_time = 0.1
autostart = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="ColorPicker" type="ColorPicker" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 316.0
margin_bottom = 470.0

[node name="ColorPicker2" type="ColorPicker" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -304.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 466.0

[node name="ItemList" type="ItemList" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -161.0
margin_right = 365.0

[node name="ItemList2" type="ItemList" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -365.0
margin_top = -161.0

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -154.0
margin_top = -146.0
margin_right = 154.0
margin_bottom = -78.0
custom_fonts/font = ExtResource( 4 )
text = "Play"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -154.0
margin_top = -68.0
margin_right = 154.0
custom_fonts/font = ExtResource( 4 )
text = "Back"

[connection signal="timeout" from="MeshInstance/Timer" to="MeshInstance" method="_on_Timer_timeout"]
[connection signal="color_changed" from="ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="color_changed" from="ColorPicker2" to="." method="_on_ColorPicker2_color_changed"]
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="item_selected" from="ItemList2" to="." method="_on_ItemList2_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
